cargo-features = ["rename-dependency"]

[package]
name = "tc-cache"
version = "0.1.0"
authors = ["Dmitry Galinsky <dima.exe@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_cbor = "0.9"

md5 = { package = "md-5", version = "0.8", features = ["std", "asm"] }
hex = "0.3"

memmap = "0.7"
walkdir = "2.2"
rayon = "1.0"
snap = "0.2"
filetime = "0.2"

[dev-dependencies]
tempfile = "3.0"
