cargo-features = ["rename-dependency"]

[package]
name = "tc-cache"
version = "0.1.0"
authors = ["Dmitry Galinsky <dima.exe@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6"
clap = "2.32"

lazy_static = "1.2"
spin = "0.4"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_cbor = "0.9"

digest_md5 = { package = "md-5", version = "0.8", features = ["std", "asm"] }
hex = "0.3"

memmap = "0.7"
walkdir = "2.2"
rayon = "1.0"
snap = "0.2"
filetime = "0.2"

url = "1.7"
futures = "0.1"
rusoto_core = { version = "0.35.0", default_features = false, features = ["rustls"] }
rusoto_s3 = { version = "0.35.0", default_features = false, features = ["rustls"] }


[dev-dependencies]
tempfile = "3.0"

[profile.release]
lto = true
# panic = "abort"
# debug = true
