[package]
name = "tc-cache"
version = "0.1.0"
authors = ["Dmitry Galinsky <dima.exe@gmail.com>"]
edition = "2018"
description = "TeamCity build cache CLI"

[dependencies]
log = "0.4"
env_logger = "0.6"
clap = "2.33"

lazy_static = "1.3"
spin = "0.5"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_cbor = "0.10"

digest_md5 = { package = "md-5", version = "0.8", features = ["std", "asm"] }
hex = "0.3"

memmap = "0.7"
walkdir = "2.2"
rayon = "1.1"
snap = "0.2"
filetime = "0.2"

url = "2.0"
futures = "0.1"
rusoto_core = { version = "0.40.0", default_features = false, features = ["rustls"] }
rusoto_s3 = { version = "0.40.0", default_features = false, features = ["rustls"] }
tokio = "0.1"

[dev-dependencies]
tempfile = "3.1"

[profile.release]
lto = true
panic = "abort"
# debug = true
